[package]
name = "pixel-canvas-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
goto = "0.1.2"
image = "0.24.6"
indicatif = { version = "0.17.3", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tokio = { version = "1.28.1", features = ["full"] }

